corrected git repo, final touches on contact me -> nav, figcaptions and white spacing across whole page

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -100,14 +100,23 @@ figcaption {
     bottom: 3em;
     left: 0.8em;
     color: var(--dark);
-    padding: 1em 3em 1em 1em;
+    padding: 2em 3em 2em 1em;
     background-color: var(--primary);
     color: var(--light);
 }
 
 figcaption p {
-    font-size: 1.5em;
-    margin-bottom: 0.3em;
+    font-size: 1.2em;
+    margin-bottom: 1em;
+    font-weight: 400;
+}
+
+figcaption span {
+    font-size: 0.8em;
+}
+
+svg {
+    width: 20px;
 }
 
 .hero {
@@ -134,7 +143,7 @@ figcaption p {
 .avatar-container {
     position: relative;
     width: 50%;
-    height: 30%;
+    height: 40%;
     display: flex;
     justify-content: center;
     overflow: hidden;
@@ -167,9 +176,7 @@ figcaption p {
 
 .contact-me ul {
     padding: 3vh 0;
-    text-align: center;
     display: flex;
-    height: 25vh;
     justify-content: space-evenly;
     font-size: 1.25rem;
 }
@@ -179,6 +186,10 @@ figcaption p {
     main {
         width: 80%;
     }
+
+    /* header {
+        margin-bottom: 1%;
+    } */
 
     section h2 {
         margin-right: 2%;
@@ -214,25 +225,26 @@ figcaption p {
     
     .column-a {
         float: left;
+        max-width: 380px;
     }
     
     .column-b {
         float: right;
-        max-width: 580px;
+        max-width: 500px;
     }
 
     nav ul {
         flex-direction: row;
         justify-content: space-between;
         min-width: 1200px;
-        height: 0;
     }
 
     .contact-me ul {
-        flex-direction: row;
-        justify-content: space-between;
-        min-width: 1200px;
-        height: 0;
+        padding: 3vh 0;
+        display: flex;
+        justify-content: space-evenly;
+        font-size: 1.25rem;
+        min-width: 200px;
     }
 
 }
